# OPK-Zadanie2

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bringup/share/bringup/: local_setup.sh  package.sh
install/bringup/share/bringup/config/: game_config.yaml
install/bringup/share/bringup/launch/: pvp.launch.py
install/core/include/core/config/: ConfigLoader.h  GameConfig.h
install/core/include/core/environment/: Environment.h
install/core/include/core/game/: BotController.h  GameLogic.h
install/core/include/core/lidar/: Lidar.h
install/core/include/core/robot/: Robot.h
install/core/include/core/types/: Geometry.h
install/core/include/core/util/: Exception.h
install/core/include/core/world/: Collectible.h  Obstacle.h  Station.h  TrashFactory.h  WorldManager.h  WorldObject.h
install/core/share/core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/core/share/core/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  coreConfig-version.cmake  coreConfig.cmake  export_coreExport.cmake
install/core/share/core/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/msgs/share/msgs/: package.sh
install/msgs/share/msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_msgs__rosidl_generator_cExport.cmake  export_msgs__rosidl_generator_pyExport.cmake  export_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  msgsConfig.cmake  msgs__rosidl_typesupport_introspection_cppExport.cmake
install/msgs/share/msgs/msg/: RobotStatus.idl
install/msgs/share/msgs/srv/: CollectTrash_Response.msg  UnloadTrash.idl  UnloadTrash.srv  UnloadTrash_Request.msg
install/nodes/lib/nodes/: game_node  lidar_node  pvp_teleop_node  teleop_node
install/nodes/share/nodes/: local_setup.sh  package.sh
install/nodes/share/nodes/cmake/: nodesConfig.cmake
install/vacuum_bringup/share/vacuum_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vacuum_bringup/share/vacuum_bringup/cmake/: vacuum_bringupConfig-version.cmake  vacuum_bringupConfig.cmake
install/vacuum_bringup/share/vacuum_bringup/config/: game_config.yaml  vacuum.rviz
install/vacuum_bringup/share/vacuum_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/vacuum_bringup/share/vacuum_bringup/launch/: duel.launch.py  pvp.launch.py
install/vacuum_core/include/vacuum_core/config/: ConfigLoader.h  GameConfig.h
install/vacuum_core/include/vacuum_core/environment/: Environment.h
install/vacuum_core/include/vacuum_core/game/: BotController.h  GameLogic.h
install/vacuum_core/include/vacuum_core/lidar/: Lidar.h
install/vacuum_core/include/vacuum_core/robot/: Robot.h
install/vacuum_core/include/vacuum_core/types/: Geometry.h
install/vacuum_core/include/vacuum_core/util/: Exception.h
install/vacuum_core/include/vacuum_core/world/: Collectible.h  Obstacle.h  Station.h  TrashFactory.h  WorldManager.h  WorldObject.h
install/vacuum_core/share/vacuum_core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vacuum_game/lib/vacuum_game/: bot_node  game_node  teleop_node
install/vacuum_game/share/vacuum_game/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/vacuum_msgs/share/vacuum_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vacuum_robot/lib/vacuum_robot/: lidar_node  robot_node
install/vacuum_robot/share/vacuum_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: vacuum.rviz
src/bringup/launch/: duel.launch.py
src/core/: CMakeLists.txt  package.xml
src/core/src/: BotController.cpp  ConfigLoader.cpp  Environment.cpp  GameLogic.cpp  Lidar.cpp  Robot.cpp  TrashFactory.cpp  WorldManager.cpp
src/core/test/: test_bot_controller.cpp  test_config_loader.cpp  test_trash_factory.cpp  test_world_manager.cpp
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: GameState.msg  TrashCount.msg
src/nodes/: CMakeLists.txt
src/nodes/src/: bot_node.cpp  game_node.cpp  lidar_node.cpp  pvp_teleop_node.cpp  robot_node.cpp  teleop_node.cpp
src/vacuum_bringup/: CMakeLists.txt
src/vacuum_bringup/config/: game_config.yaml
src/vacuum_bringup/launch/: duel.launch.py  pvp.launch.py
src/vacuum_core/: CMakeLists.txt  package.xml
src/vacuum_core/include/vacuum_core/config/: ConfigLoader.h  GameConfig.h
src/vacuum_core/include/vacuum_core/environment/: Environment.h
src/vacuum_core/include/vacuum_core/game/: BotController.h  GameLogic.h
src/vacuum_core/include/vacuum_core/lidar/: Lidar.h
src/vacuum_core/include/vacuum_core/robot/: Robot.h
src/vacuum_core/include/vacuum_core/types/: Geometry.h
src/vacuum_core/include/vacuum_core/util/: Exception.h
src/vacuum_core/include/vacuum_core/world/: Collectible.h  Obstacle.h  Station.h  TrashFactory.h  WorldManager.h  WorldObject.h
src/vacuum_core/src/: BotController.cpp  ConfigLoader.cpp  Environment.cpp  GameLogic.cpp  Lidar.cpp  Robot.cpp  TrashFactory.cpp  WorldManager.cpp
src/vacuum_core/test/: test_bot_controller.cpp  test_config_loader.cpp  test_trash_factory.cpp  test_world_manager.cpp
src/vacuum_game/: CMakeLists.txt  package.xml
src/vacuum_game/src/: bot_node.cpp  game_node.cpp
src/vacuum_msgs/: CMakeLists.txt
src/vacuum_msgs/msg/: RobotStatus.msg  TrashItem.msg
src/vacuum_msgs/srv/: CollectTrash.srv
src/vacuum_robot/: CMakeLists.txt  package.xml
src/vacuum_robot/src/: lidar_node.cpp  robot_node.cpp
(+287 files in other folders)
